# storage/openapi.yml
@@ -20,7 +20,14 @@ paths:
       operationId: app.get_temperature_reading
       description: Gets the temperature readings added after a timestamp
       parameters:
-        - name: timestamp
+        - name: start_timestamp
+          in: query
+          description: Limits the number of items on a page
+          schema:
+            type: string
+            format: date-time
+            example: 2016-08-29T09:12:33.001Z
+        - name: end_timestamp
           in: query
           description: Limits the number of items on a page
           schema:
@@ -60,6 +67,13 @@ paths:
             type: string
             format: date-time
             example: 2016-08-29T09:12:33Z
+        - name: end_timestamp
+          in: query
+          description: Limits the number of items on a page
+          schema:
+            type: string
+            format: date-time
+            example: 2016-08-29T09:12:33.001Z
       responses:
         '200':
           description: Successfully returned a list of temperature readings
